# Load-Student-Data-POC

./: README.md
poc/before/: README.md  load_students.py  pyproject.toml
poc/four/: .env.example  README.md  data_handler.py  discovery_client.py  edfi_client.py  load_student_data.py  main.py  oauth2_client.py  pyproject.toml  students.csv  test_loader.py
poc/one/: .env.template  README.md  load_students.py
poc/six/: .env.example  README.md  pyproject.toml  student_loader.py  test_student_loader.py  usage.py
poc/three/: .env.example  README.md  demo.py  load_students.py  pyproject.toml  test_mapping.py
poc/two/: .env.example  README.md  demo.py  load_student_data.py  requirements.txt  students.csv
