[tool.poetry]
name = "edfi-discovery-poc"
version = "0.1.0"
description = "Ed-Fi Discovery API POC for loading student data"
authors = ["GitHub Copilot"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
python-dateutil = "^2.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"