[tool.poetry]
name = "edfi-student-loader"
version = "0.1.0"
description = "Ed-Fi API Student Data Loader POC"
authors = ["AI Assistant <ai@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.5"
pandas = "^2.3.3"
python-dotenv = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"